--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^20",
