--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.5.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^6.0.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
