--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.0",
+    "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "react": "^18",
