--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^6.0.1",
