--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@react-email/components": "^0.5.0",
+    "@react-email/render": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^6.0.1",
