--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.15",
+    "@ai-sdk/react": "^2.0.15",
     "@react-email/components": "^0.5.0",
     "@react-email/render": "^1.2.0",
+    "ai": "^5.0.15",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "mongoose": "^8.17.1",
