--- a/package.json
+++ b/package.json
@@ -10,18 +10,30 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.15",
-    "@ai-sdk/react": "^2.0.15",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.0",
     "@react-email/render": "^1.2.0",
     "ai": "^5.0.15",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "express": "^5.1.0",
+    "lucide-react": "^0.540.0",
     "mongoose": "^8.17.1",
     "next": "14.2.30",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.62.0",
     "resend": "^6.0.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
